...
        android:background="#CAB3B3"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        tools:layout_editor_absoluteX="256dp" />

    <Button
        android:id="@+id/LogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:onClick="logOut"
        android:text="Log out"
...
